Revert "Fixed: Menus overlapping (z-index) when wrapped #36"
This reverts commit 9239035ac7c6ba49f3f69137210a8cba2ed07223.

--- a/css/navbar.menu.css
+++ b/css/navbar.menu.css
@@ -5,7 +5,6 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  z-index: 999;
 }
 #navbar-administration .navbar-box {
   display: block;
